Bug #23766
mds: crash during shutdown_pass
Status:
Resolved
Priority:
Urgent
Assignee:
Category:
Correctness/Safety
Target version:
% Done:
0%
Source:
Development
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash, multimds
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
0> 2018-04-16 22:54:10.775 7fc8613d3700 -1 *** Caught signal (Segmentation fault) ** in thread 7fc8613d3700 thread_name:safe_timer ceph version 13.0.2-1048-g813fbad (813fbad59990e667665e37e3cc8615381e2374c2) mimic (dev) 1: (()+0x3de2a0) [0x58b059e2a0] 2: (()+0x11390) [0x7fc86acdf390] 3: (CInode::make_path_string(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, bool, CDentry const*) const+0x117) [0x58b04b9ba7] 4: (operator<<(std::ostream&, CInode const&)+0x56) [0x58b04b9cc6] 5: (MDCache::remove_inode(CInode*)+0x455) [0x58b03b3bf5] 6: (MDCache::shutdown_pass()+0xebd) [0x58b03d956d] 7: (MDSRankDispatcher::tick()+0x28d) [0x58b02d946d] 8: (FunctionContext::finish(int)+0x2c) [0x58b02ca1dc] 9: (Context::complete(int)+0x9) [0x58b02c8329] 10: (SafeTimer::timer_thread()+0x18b) [0x7fc86b3eb3ab] 11: (SafeTimerThread::entry()+0xd) [0x7fc86b3ec96d] 12: (()+0x76ba) [0x7fc86acd56ba] 13: (clone()+0x6d) [0x7fc869f5f41d] NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.
caused by myin/global_snaprealm deleted but not set to nullptr: https://github.com/ceph/ceph/blob/60e8a63fdc21654d7f199a67f3f410a9e33c8134/src/mds/MDCache.cc#L7821-L7825
Related issues
History
#1 Updated by Patrick Donnelly almost 5 years ago
- Category set to Correctness/Safety
- Status changed from New to Fix Under Review
#2 Updated by Patrick Donnelly almost 5 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler almost 5 years ago
- Copied to Backport #23790: luminous: mds: crash during shutdown_pass added
#4 Updated by Yuri Weinstein over 4 years ago
#5 Updated by Patrick Donnelly over 4 years ago
- Status changed from Pending Backport to Resolved