mds: unset deleted vars in shutdown_pass

So future passes do not try to delete again.

Fixes: http://tracker.ceph.com/issues/23766

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 3292d43192ffeb7fbf385e803c7e6e0c3c3891d9)

Conflicts:
	src/mds/MDCache.cc